test/fail/local-void.rnp
let a = {};
---
TypeError: Expected a value but got void
 --> fail/local-void.rnp:1:9
  |
1 | let a = {};
  |         ^^ Expected a value but got void
  |
